# libMR

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  Doxyfile.in  LICENSE.TXT  MANIFEST.in  README.TXT  README.md  README.rst  libMRBuildTreeSettings.cmake.in  libMRConfig.cmake.in  libMRConfigVersion.cmake.in  pyproject.toml  setup.py
doc/html/: MetaRecognition_8h_source.html  annotated.html  classMetaRecognition-members.html  classMetaRecognition.html  classes.html  config_8h_source.html  dir_3ce9c8137437e179ac11056762955bb7.html  dir_3ce9c8137437e179ac11056762955bb7_dep.map  dir_3ce9c8137437e179ac11056762955bb7_dep.md5  dir_63772b626f2709090f0bdca0f40827b4.html  dir_63772b626f2709090f0bdca0f40827b4_dep.map  dir_63772b626f2709090f0bdca0f40827b4_dep.md5  dir_7837fde3ab9c1fb2fc5be7b717af8d79.html  dir_7837fde3ab9c1fb2fc5be7b717af8d79_dep.map  dir_7837fde3ab9c1fb2fc5be7b717af8d79_dep.md5  dir_82147ea4c05c2dab3c71fe808daf7a27.html  dir_82147ea4c05c2dab3c71fe808daf7a27_dep.map  dir_82147ea4c05c2dab3c71fe808daf7a27_dep.md5  dir_a2ee54d61a6f557a7df500dc3b736c6b.html  dir_a2ee54d61a6f557a7df500dc3b736c6b_dep.map  dir_a2ee54d61a6f557a7df500dc3b736c6b_dep.md5  dir_b02cea674ceb3bcb91dbf69fc0c24cbc.html  dir_b02cea674ceb3bcb91dbf69fc0c24cbc_dep.map  dir_b02cea674ceb3bcb91dbf69fc0c24cbc_dep.md5  dir_d28a4824dc47e487b107a5db32ef43c4.html  dir_d28a4824dc47e487b107a5db32ef43c4_dep.map  dir_d28a4824dc47e487b107a5db32ef43c4_dep.md5  dir_df714b66a93e49113ae3f3d14d741ddf.html  dir_df714b66a93e49113ae3f3d14d741ddf_dep.map  dir_df714b66a93e49113ae3f3d14d741ddf_dep.md5  files.html  formula.repository  functions.html  functions_enum.html  functions_func.html  functions_rela.html  functions_vars.html  globals.html  globals_func.html  graph_legend.html  (+7 more)
examples/: CMakeLists.txt  mr-test.cpp  python_example.py  python_example_plot.py  test.py  testconsole.cpp  wbl-test.c
libMR/: CMakeLists.txt  MetaRecognition.cpp  MetaRecognition.h  weibull.c  weibull.h
python/: libmr.pyx  requirements.txt
